more info in the readme

--- a/checkpoint_submission/README
+++ b/checkpoint_submission/README
@@ -15,7 +15,11 @@ AWS Java SDK (eventually)
     (chmod 755 in linux)
     At least the auto_run.sh script needs to have permissions to be executed.
 
-3. Run auto_run.sh to setup, compile and run the WebServer;
+3. Running the server:
+    3.1 Edit the /etc/rc.local file, add the path to the auto_run.sh script at the end to be executed;
+        Mark the /etc/rc.local file as executable;
+    OR
+   3.2  Run auto_run.sh to setup, compile and run the WebServer;
 
 
 #### Architecture
@@ -30,8 +34,6 @@ Web Servers:
 
 Load Balancer: AWS Classic Load Balancer
 
-/sudoku?s=BFS&un=0&n1=9&n2=9&i=SUDOKU_PUZZLE_9x9_101
-
 Auto-Scaler: AWS Auto-scaling group
 
 
@@ -45,12 +47,12 @@ Short Description:
 
 
 
- Define Load BalancerEdit load balancer definition
+Load Balancer
 Load Balancer name: LBcheck
 Scheme: internet-facing
 Port Configuration: 80 (HTTP) forwarding to 8000 (HTTP)
  Configure Health CheckEdit health check
-Ping Target:    HTTP:8000/sudoku?s=BFS&un=0&n1=9&n2=9&i=SUDOKU_PUZZLE_9x9_101
+Ping Target:    HTTP:8000/sudoku?n1=9&n2=9&s=BFS&un=0&i=SUDOKU_PUZZLE_9x9_101&board=[[2,7,3,8,6,5,4,9,1],[9,5,8,4,7,1,2,3,6],[6,1,4,2,9,3,7,5,8],[5,6,1,3,8,7,9,2,4],[3,4,9,6,5,2,1,8,7],[7,8,2,1,4,9,3,6,5],[1,3,7,5,2,6,8,4,9],[4,2,5,9,1,8,6,7,3],[8,9,6,7,3,4,5,1,2]]
 Timeout:    10 seconds
 Interval:   30 seconds
 Unhealthy threshold:    2
@@ -64,6 +66,8 @@ VPC:    vpc-32353748
 Subnets:    subnet-a9199fe4
  Security groupsEdit security groups
 Security groups:    sg-087c9750048a6c42c
+Stickiness: Disabled
+
 
 
 
@@ -78,3 +82,58 @@ Load-Balancer:
 
 
 Auto-Scaler:
+
+
+
+Launch Group Configuration
+
+AMI - ami-00cc2ab25e7cf3f77
+Instance Type - t2.micro
+Name CNV-Launch-Check
+Purchasing option On demand
+EBS Optimized No
+Monitoring Yes
+IAM role None
+Tenancy Shared tenancy (multi-tenant hardware)
+Kernel ID Use default
+RAM Disk ID Use default
+User data
+IP Address Type Only assign a public IP address to instances launched in the default VPC and subnet. (default)
+
+Storage:
+Volume Type; Device; Snapshot; Size (GiB); Volume Type; IOPS; Throughput; Delete on Termination; Encrypted; 
+Root; /dev/xvda; snap-07b7ddad038f4289a; 8; gp2; N/A; N/A ; Yes; No; 
+
+Security group rules:
+Type; Protocol; Port Range; Source;
+HTTP TCP 80 0.0.0.0/0 
+Custom TCP Rule TCP 8000 0.0.0.0/0 
+SSH TCP 22 0.0.0.0/0
+
+
+
+
+Auto Scaling Group
+
+ Auto Scaling Group DetailsEdit details
+Group name CNV-AutoScaler-Check
+Group size  1
+Minimum Group Size  1
+Maximum Group Size  10
+Subnet(s)  subnet-a9199fe4
+Load Balancers  LBcheck
+Target Groups
+Health Check Type  ELB
+Health Check Grace Period  300
+Detailed Monitoring  Yes
+Instance Protection  None
+Service-Linked Role  AWSServiceRoleForAutoScaling
+
+
+ Scaling PoliciesEdit scaling policies
+
+Increase Group Size
+With alarm = awsec2-CNV-AutoScaler-Check-CPU-Utilization; Add 10,20 percent of group with minimum adjustment of 1 and 60 seconds for instances to warm up
+
+Decrease Group Size
+With alarm = awsec2-CNV-AutoScaler-Check-High-CPU-Utilization; Remove 10,20 percent of group with minimum adjustment of 1
